# Todo-App-Chatbot-Evolution

./: .gitignore  API.md  CLAUDE.md  IMPLEMENTATION_SUMMARY.md  README.md  SECURITY.md  USER_ISOLATION_VERIFICATION.md  package-lock.json
.specify/memory/: constitution.md
backend/: .env.example  CLAUDE.md  Dockerfile  README.md  app.py  conftest.py  pyproject.toml  requirements.txt  test_integration.py  test_main.py
backend/src/: __init__.py  auth.py  config.py  db.py  main.py  models.py  test_db_connection.py
backend/src/database/: utils.py
backend/src/dependencies/: __init__.py  auth.py
backend/src/middleware/: auth.py  jwt.py
backend/src/routes/: __init__.py  auth.py  tasks.py
backend/src/schemas/: __init__.py  tasks.py
backend/src/services/: task_service.py
frontend/: .env.example  CLAUDE.md  declarations.d.ts  jest.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json
frontend/__tests__/: TaskItem.test.tsx
frontend/app/: globals.css  layout.tsx  page.metadata.ts  page.tsx
frontend/components/: DatePicker.tsx  DeleteConfirmation.tsx  EmptyState.tsx  FilterBar.tsx  Footer.tsx  Header.tsx  LoadingSpinner.tsx  LoginForm.tsx  NotificationToast.tsx  PrioritySelector.tsx  ProtectedRoute.tsx  RecurringTaskSelector.tsx  SignupForm.tsx  SortControls.tsx  TagInput.tsx  TaskCompletionConfirmation.tsx  TaskFormModal.tsx  TaskItem.tsx  TaskList.tsx  ThemeToggle.tsx  UserProfileDropdown.tsx
frontend/contexts/: AuthContext.tsx  ThemeContext.tsx
frontend/hooks/: useNotifications.ts
specs/: overview.md  plan.md  spec.md  tasks.md
(+26 files in other folders)
